# SHEEP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE.md  Dockerfile  Dockerfile_sheep_base  EPAAS V2.ipynb  EPAAS_benchmark_notebook.ipynb  HOWTO_DEPLOY_TO_AZURE.md  Low-level-benchmarks.ipynb  Mid-level benchmarks.ipynb  README.md  Using_SHEEP.ipynb  docker-compose.yml
backend/: API.md  CMakeLists.txt  Dockerfile  Dockerfile_profile  Dockerfile_sheep_base  README.md
backend/applications/: CMakeLists.txt  helib-context-example.cpp  seal-example.cpp
backend/applications/benchmarks/: helib-sheep-bench.cpp
backend/applications/examples/: bitonic-sort-helib.cpp  bitonic-sort-tfhe.cpp  circuit-parser.cpp  (+7 more)
backend/include/: bits.hpp  circuit-repo.hpp  circuit-util.hpp  circuit.hpp  context-clear.hpp  context-helib.hpp  context-lp.hpp  context-palisade.hpp  context-seal-bfv.hpp  context-seal-ckks.hpp  context-seal.hpp  context-tfhe-bool.hpp  context-tfhe-common.hpp  context-tfhe-integer.hpp  context.hpp  protect-eval.hpp  sheep-server.hpp  simple-circuits.hpp
backend/src/: circuit.cpp  sheep-server.cpp
backend/tests/: CMakeLists.txt  circuit-test-util.hpp  multiple-assignment.sheep  test-bit-get-set.cpp  test-circuit-copy.cpp  test-clear-bool-add.cpp  test-clear-bool-addConst.cpp  test-clear-bool-compare.cpp  test-clear-bool-multiply.cpp  test-clear-bool-ripple-carry-add.cpp  test-clear-bool-rotate.cpp  test-clear-bool-select.cpp  test-clear-bool-subtract.cpp  test-clear-complex-add.cpp  test-clear-complex-multiply.cpp  test-clear-double-add.cpp  test-clear-double-multiply.cpp  test-clear-int8_t-add.cpp  test-clear-int8_t-addConst.cpp  test-clear-int8_t-compare.cpp  test-clear-int8_t-multiply.cpp  test-clear-int8_t-ripple-carry-add.cpp  test-clear-int8_t-rotate.cpp  test-clear-int8_t-select.cpp  test-clear-int8_t-subtract.cpp  test-clear-uint8_t-add.cpp  test-clear-uint8_t-addConst.cpp  test-clear-uint8_t-compare.cpp  test-clear-uint8_t-multiply.cpp  test-clear-uint8_t-ripple-carry-add.cpp  test-clear-uint8_t-rotate.cpp  test-clear-uint8_t-select.cpp  test-clear-uint8_t-subtract.cpp  test-helib-f2-bool-add.cpp  test-helib-f2-bool-addConst.cpp  test-helib-f2-bool-c7.cpp  test-helib-f2-bool-compare.cpp  test-helib-f2-bool-encrypt-decrypt.cpp  test-helib-f2-bool-encrypt-serialize.cpp  test-helib-f2-bool-maximum.cpp  (+165 more)
example/: CMakeLists.txt  benchmark.cpp  bitonic-sort-helib.cpp  bitonic-sort-tfhe.cpp  bitonic-sorting-circuit.cpp  clear-context-example.cpp  helib-context-example.cpp  lp-context-example.cpp  lpplain.cpp  run-sheep-server.cpp  seal-example.cpp  seal-param-selector.cpp  sheep-server.cpp  simple-circuit-maker.cpp  tfhe-example.cpp
sketch/: CMakeLists.txt  Makefile  README.md  circuit-example.cpp  circuit-repo.hpp  circuit.hpp  clear-context-example.cpp  context-clear.hpp  context-example.cpp  context-helib.cpp  context-helib.hpp  context.hpp  helib-context-example.cpp  helib-example.cpp
sketch/example/: CMakeLists.txt  benchmark-idea.cpp  benchmark.cpp  bitonic-sort-helib.cpp  bitonic-sorting-circuit.cpp  circuit-example.cpp  circuit-parser.cpp  clear-context-example.cpp  custom-example.cpp  helib-context-example.cpp  simple-circuit-maker.cpp  tfhe-example.cpp
sketch/frontend/: README.md  app.py  database.py  forms.py  plotting.py  utils.py
sketch/include/: bits.hpp  circuit-repo.hpp  circuit-util.hpp  circuit.hpp  context-clear.hpp  context-helib.hpp  context-tfhe-bool.hpp  context-tfhe-integer.hpp  context-tfhe-uint8_t.hpp  context-tfhe.hpp  context.hpp  simple-circuits.hpp
sketch/scripts/: generate_circuits_and_inputs.py  run_benchmarks.py
sketch/src/: circuit.cpp  context-helib.cpp  simple-circuits.cpp
sketch/tests/: CMakeLists.txt  CMakeLists.txt~  circuit-test-util.hpp  test-circuit-copy.cpp  test-circuit-par.cpp  test-circuit-seq.cpp  test-clear-add.cpp~  test-clear-bool-ripple-carry-add.cpp  test-clear-bool-select.cpp  test-clear-bool-subtract.cpp  test-clear-compare.cpp  test-clear-int8_t-compare.cpp  test-clear-int8_t-multiply.cpp  test-clear-int8_t-select.cpp  test-clear-int8_t-subtract.cpp  test-clear-multiply.cpp  test-clear-multiply.cpp~  test-clear-ripple-carry-add.cpp  test-clear-subtract.cpp  test-clear-uint8_t-multiply.cpp  test-clear-uint8_t-select.cpp  test-helib-bool-add.cpp  test-helib-bool-compare.cpp  test-helib-bool-multiply.cpp  test-helib-bool-select.cpp  test-helib-bool-subtract.cpp  test-helib-f2-bool-add.cpp  test-helib-f2-bool-addConst.cpp  test-helib-f2-bool-compare.cpp  test-helib-f2-bool-multiply.cpp  test-helib-f2-bool-negate.cpp  test-helib-f2-bool-select.cpp  test-helib-f2-bool-subtract.cpp  test-helib-f2-int8_t-add.cpp  test-helib-f2-int8_t-compare.cpp  test-helib-f2-int8_t-multiply.cpp  test-helib-f2-int8_t-negate.cpp  test-helib-f2-int8_t-select.cpp  test-helib-f2-int8_t-subtract.cpp  test-helib-f2-uint8_t-add.cpp  (+56 more)
tests/: CMakeLists.txt  circuit-test-util.hpp  good.sheep  multiple-input.sheep  test-circuit-copy.cpp  test-circuit-par.cpp  test-circuit-seq.cpp  test-clear-bool-add.cpp  test-clear-bool-addConst.cpp  test-clear-bool-compare.cpp  test-clear-bool-multiply.cpp  test-clear-bool-ripple-carry-add.cpp  test-clear-bool-select.cpp  test-clear-bool-subtract.cpp  test-clear-int8_t-add.cpp  test-clear-int8_t-compare.cpp  test-clear-int8_t-multiply-binary.cpp  test-clear-int8_t-multiply.cpp  test-clear-int8_t-ripple-carry-add.cpp  test-clear-int8_t-select.cpp  test-clear-int8_t-subtract.cpp  test-clear-uint8_t-add.cpp  test-clear-uint8_t-compare.cpp  test-clear-uint8_t-multiply.cpp  test-clear-uint8_t-ripple-carry-add.cpp  test-clear-uint8_t-select.cpp  test-clear-uint8_t-subtract.cpp  test-helib-f2-bool-add.cpp  test-helib-f2-bool-addConst.cpp  test-helib-f2-bool-compare.cpp  test-helib-f2-bool-encrypt-decrypt.cpp  test-helib-f2-bool-maximum.cpp  test-helib-f2-bool-multByConst.cpp  test-helib-f2-bool-multiply.cpp  test-helib-f2-bool-negate.cpp  test-helib-f2-bool-select.cpp  test-helib-f2-bool-subtract.cpp  test-helib-f2-int8_t-add.cpp  test-helib-f2-int8_t-addConst.cpp  test-helib-f2-int8_t-compare.cpp  (+70 more)
(+728 files in other folders)
